2009-03-12  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed a crash case by Miguel in the configuration.
	  in a languge setting configuration of an activity
	  if we change the language, gcompris crashes.
          commit trunk 3769

	* src/gcompris/board_config_combo.c:
	(gc_board_config_combo_locales_asset):

2009-03-10  Bruno coudoin  <bruno.coudoin@free.fr>

	Patch from Miguel that fixes the configuration
	of python activities (tuxpaint and login was crashing).
	Merge from trunk 3765 and 3766

	* src/boards/Makefile.am:
	* src/boards/py-mod-gcompris.c:
	(py_gc_board_config_window_display),
	(py_gc_board_config_boolean_box), (py_gc_board_config_combo_box),
	(py_gc_board_config_radio_buttons), (py_gc_board_config_spin_int),
	(py_gc_board_conf_separator), (py_gc_board_config_combo_locales),
	(py_gc_board_config_combo_locales_asset),
	(py_gc_board_config_textview):
	* src/boards/python/login.py:
	* src/boards/python/pythontest.py:
	* src/boards/python/tuxpaint.py:
	* src/gcompris/board_config_radio.c:
	(gc_board_config_radio_buttons):

2009-03-10  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixes to compile again on windows.

	* Makefile.am:
	* configure.in:
	* src/boards/Makefile.mingw:
	* src/gcompris/Makefile.mingw:
	* src/gcompris/gc_net.c: (gc_net_destroy),
	(gc_net_get_url_from_file), (gc_net_dir_read_name),
	(gc_cache_init), (gc_cache_get_relative), (gc_cache_add),
	(gc_cache_import_pixmap), (gc_cache_remove), (_table_foreach),
	(gc_cache_save), (gc_cache_destroy):

2009-03-04  Bruno coudoin  <bruno.coudoin@free.fr>

	- gnet is now enable by default.
	  Merged from trunk 3758

	* configure.in:

2009-02-28  Bruno coudoin  <bruno.coudoin@free.fr>

	- Patch from Johan Cwiklinski <mailings x-tnd.be>
	  to support python 2.6

	* src/boards/python/admin/class_edit.py:
	* src/boards/python/admin/group_edit.py:
	* src/boards/python/admin/profile_edit.py:

2009-02-25  Bruno coudoin  <bruno.coudoin@free.fr>

	- Now properly points use images in ~My GCompris/Images